[Bug #257] Minor code cleanup in modelgen.